--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.5.2
+dj-database-url==1.0.0
 Django==4.0.5
 django-filter==22.1
 django-richtextfield==1.6.1
@@ -13,3 +14,4 @@ sqlparse==0.4.2
 tzdata==2022.1
 whitenoise==6.2.0
 zipp==3.8.1
+psycopg2
